@@ -1,4 +1,6 @@
 v0.13
+	* FIX : After coming out of fullscreen, revert to previous state rather than showing all docks
+	* FIX : do not unselect newly created features
 	* FIX : make moving images to start of track work
 	* ADD : Raw tracks from OSM are split if trkpts are >100m apart
 	* ADD : update info dock on hover
